# wayctrl

./: Cargo.toml
src/: main.rs
