[package]
name = "wayctrl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wayland-client = { git = "https://github.com/Smithay/wayland-rs/" }
wayland-scanner = { git = "https://github.com/Smithay/wayland-rs/" }
wayland-backend = { git = "https://github.com/Smithay/wayland-rs/" }
